[package]
name = "solana-options"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.8.1"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
arrayref = "0.3.6"
borsh = "0.9.1"
borsh-derive = "0.9.1"
spl-associated-token-account = { version = "1.0.3", features = ["no-entrypoint"]}
# solana-sdk = "1.8.1"

[dev-dependencies]
solana-program-test = "1.7.9"
solana-sdk = "1.8.1"

[lib]
name = "solana_options"
crate-type = ["cdylib", "lib"]